--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>I'm using github</h1>
-    <p>my name is sabbir</p>
+    <p>my name is <strong>sabbir</strong> </p>
+    
 </body>
 </html>
